--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vite": "^4.3.4"
   },
   "devDependencies": {
     "@mozilla/readability": "^0.4.4",
