--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 # JaduGPT
 DEFAULT_MODEL=gpt-3.5-turbo
-DEFAULT_SYSTEM_PROMPT=You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.
+DEFAULT_SYSTEM_PROMPT=You are JaduGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown.
 OPENAI_API_KEY=YOUR_KEY
 
 # Google
